--- a/index.html
+++ b/index.html
@@ -137,15 +137,18 @@
             <p class="three-description rong">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
             <div class="satelite">
                  <div>
-                    <img src="assets/satelite.png" alt="" class="pic-style">
+                    <img src="assets/satelite.png" alt="" style="border-radius: 24px;" class="rn-img-two">
                  </div>
                  <div class="likha">
                       <h4 class="likha-title">Bangladesh Launches New Satellite</h4>
                       <img src="assets/al-jazeera.png"  alt=""  class="cnl-logo">
-                      <p class="likha-date">Date: 05/01/2025  Time: 10.25 PM</p>
+                      <div class="likha-somoy rong">
+                      <p class="likha-date">Date: 05/01/2025 </p>
+                      <p>Time: 10.25 PM</p>
+                    </div>
                       <p class="likha-description">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
                         with a certain degree of justification, be able to speak of humankind as civilized</p>
-                      <button>Read More</button>
+                      <button class="click">Read More</button>
                       
                  </div>
             </div>
